/*
 * Copyright (C) 2021-2021 Huawei Technologies Co., Ltd. All rights reserved.
 */
syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.huawei.sermant.plugin.servermonitor.entity";

message IbmJvmMetricCollection {
  repeated IbmJvmMetric metrics = 1;
  string service = 2;
  string serviceInstance = 3;
}

message IbmJvmMetric {
  repeated IbmPoolMetric ibmPoolMetrics = 1;
  int64 time = 2;
}

message IbmPoolMetric {
  IbmPoolType type = 1;
  int64 init = 2;
  int64 max = 3;
  int64 used = 4;
  int64 committed = 5;
}

enum IbmPoolType {
  IBM_CODE_CACHE_USAGE = 0;
  IBM_DATA_CACHE_USAGE = 1;
  IBM_TENURED_SOA_USAGE = 2;
  IBM_TENURED_LOA_USAGE = 3;
  IBM_NURSERY_ALLOCATE_USAGE = 4;
  IBM_NURSERY_SURVIVOR_USAGE = 5;
  IBM_CLASS_STORAGE_USAGE = 6;
  IBM_MISCELLANEOUS_USAGE = 7;
}